# sergio_hardware

./: .travis.yml  CATKIN_IGNORE  CMakeLists.txt  README.md  base_controller.ops  base_controller_odom.ops  base_controller_odom_ff.ops  function.text  package.xml  sergiohardware.launch  soem.ops  soem2.ops  torso_specs.txt
base_testing/: soem.ops
base_testing/ffw_tuning/: base_controller_ffw.ops  measurement.launch  measurement.ops
base_testing/frf_measurements/: frf_odom_floor.ops  frf_one_wheel_air.ops  frf_one_wheel_floor.ops  identification.launch  wheel_pos_control.ops
base_testing/frf_measurements/pos_air_measurement/: frf_one_wheel_air.ops  wheel_pos.launch
base_testing/pos_control/: base_controller.ops  base_controller_odom.ops  base_controller_odom_ff.ops  pos_control.launch
base_testing/test/: trace_always.ops  trace_always_odom.ops
base_testing/time_measurements/: time_measurement.launch
base_testing/vel_control/: base_controller_vel.ops  base_controller_vel_odom.ops  vel_control.launch
dynamixel_testing/: all_dynamixels_controller.ops  dynamixel_controllers.ops  head_controller.ops  torso_laser_controller.ops
identification/: .gv  frf_odom_floor.ops  frf_one_wheel_floor.ops  identification.launch
include/: ConversionSpindleAngle.hpp  DynamixelController.hpp  DynamixelControllers.hpp  InitCalipherToSpindle.hpp  MotorTest.hpp  RefGenerator.hpp  RefTrajectory.hpp  TorsoFeedForward.hpp
launch/: all.launch  all_dynamixels.launch  all_ffw.launch  base.launch  ethercat.launch  test.launch  torso.launch  torso_allone.launch  torso_dynamixel.launch
ops/: all_dynamixel_controllers.ops  all_dynamixels_controller.ops  base_controller.ops  laser_dynamixel_controller.ops  soem.ops  soem_base_torso.ops  soem_copy.ops  soem_torso.ops  test.ops  test_tilt_dynamixel.ops  torso_controller.ops  torso_controller_NO_calibration.ops  torso_controller_ffw.ops  torso_controller_spindleRef.ops  torso_controller_spindleRef_noCalipher.ops  torso_controller_test.ops  torso_laser_controller.ops
ops/tracing/: trace_always_odom.ops  tracing_torso.ops
src/: ConversionSpindleAngle.cpp  DynamixelController.cpp  DynamixelControllers.cpp  InitCalipherToSpindle.cpp  MotorTest.cpp  RefGenerator.cpp  RefTrajectory.cpp  TorsoFeedForward.cpp
src/sergio_hardware/: torso_laser_leveler.py
test/: test_analog_outs.ops  trace.ops  trace_always.ops  trace_always_odom.ops
time_measurements/: identification.launch  reference.ops
torso_testing/: .tb_history  frf_torso_upper.ops  identification_torso.launch  legs_controller.ops  legs_measurement.launch  legs_measurement.ops  log.txt  lower_test.launch  ref_trajecory.launch  soem_torso.ops  test_ref.ops  torso_controller.ops  torso_controller_ffw.ops  torso_lower_control_sineRef.ops  torso_measurement.launch  torso_measurement.ops  torso_reference_trajectory.ops  torso_sine.launch  torso_test.launch  torso_test4.ops  torso_upper_control1.ops  torso_upper_control_sineRef.ops
torso_testing/frf_measurements/: frf_torso.ops  identification.launch  torso_controller_frf.ops
torso_testing/old/: .tb_history  test_component.ops  torso_lower_control.ops  torso_test4.ops  torso_upper_control1.ops  upper_test.launch
torso_testing/test_feedforward/: .tb_history  measurement.launch  measurement.ops  measurement_acc.ops  measurement_stand_bend.ops  test.ops  torso_controller.ops  torso_controller_ffw.ops
velocity_control/: base_controller_vel.ops  base_controller_vel_odom.ops  vel_control.launch
(+3 files in other folders)
